# Copyright (c) 2020 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/lite/config/component/lite_component.gni")
import("//build/lite/config/subsystem/aafwk/path.gni")
import("//build/lite/ndk/ndk.gni")

#if (ohos_build_compiler == "clang") {
#  copy("hdi_media") {
#    sources = [ "hal/hdi_media/${board_name}/llvm/ohos/libs/libhdi_media.so" ]
#    outputs = [ "$root_out_dir/libhdi_media.so" ]
#  }
#}

#if (ohos_build_compiler == "gcc") {
#  copy("hdi_media") {
#    sources = [ "hal/hdi_media/${board_name}/gcc/ohos/libs/libhdi_media.so" ]
#    outputs = [ "$root_out_dir/libhdi_media.so" ]
#  }
#}

shared_library("hdi_camera") {
  output_name = "hdi_camera"
  sources = [
    "./src/hal_camera.c",
    "./src/hi_camera_vi.c",
  ]
  include_dirs = [
    "src",
    "../../common/source/include",
    "//drivers/peripheral/display/interfaces/include",
    "//drivers/peripheral/base",
    "//foundation/multimedia/media_utils_lite/hals",
    "//device/soc/hisilicon/common/hal/middleware/source/component/otconfaccess/include/",
    "//device/soc/hisilicon/common/hal/middleware/source/common/include/"
  ]
  ldflags = [ "-lss_mpi" ]
  ldflags += [ "-lotconfaccess" ]
  if (board_name == "hispark_aifly" || board_name == "hispark_aiflylite") {
  ldflags += [ "-lot_osal" ]
  ldflags += [ "-lot_irq" ]
  ldflags += [ "-lss_isp" ]
  ldflags += [ "-lot_mpi_isp" ]
  ldflags += [ "-lot_isp" ]
  ldflags += [ "-lot_base" ]
  ldflags += [ "-lss_crb" ]
  ldflags += [ "-lss_ir_auto" ]
  ldflags += [ "-lss_awb" ]
  ldflags += [ "-lss_ive" ]
  ldflags += [ "-lss_dnvqe" ]
  ldflags += [ "-lss_drc" ]
  ldflags += [ "-lss_ldci" ]
  ldflags += [ "-lss_upvqe" ]
  ldflags += [ "-lss_dehaze" ]
  ldflags += [ "-lss_voice_engine" ]
  ldflags += [ "-lss_ae" ]
  ldflags += [ "-lss_bnr" ]
  ldflags += [ "-lss_acs" ]
  ldflags += [ "-lss_extend_stats" ]
  ldflags += [ "-lss_calcflicker" ]
  ldflags += [ "-lss_hdmi" ]
  ldflags += [ "-lot_sys" ]
  ldflags += [ "-lot_chnl" ]
  ldflags += [ "-lot_rgn" ]
  ldflags += [ "-lot_dis" ]
  ldflags += [ "-lot_vpp" ]
  ldflags += [ "-lot_vi" ]
  ldflags += [ "-lot_vpss" ]
  ldflags += [ "-lot_vo" ]
  ldflags += [ "-lot_vedu" ]
  ldflags += [ "-lot_rc" ]
  ldflags += [ "-lot_venc" ]
  ldflags += [ "-lot_h264e" ]
  ldflags += [ "-lot_h265e" ]
  ldflags += [ "-lot_jpege" ]
  ldflags += [ "-lot_jpegd" ]
  ldflags += [ "-lot_vfmw" ]
  ldflags += [ "-lot_vdec" ]
  ldflags += [ "-lot_aio" ]
  ldflags += [ "-lot_ai" ]
  ldflags += [ "-lot_ao" ]
  ldflags += [ "-lot_aenc" ]
  ldflags += [ "-lot_adec" ]
  ldflags += [ "-lot_acodec" ]
  ldflags += [ "-lot_sensor_i2c" ]
  ldflags += [ "-lot_gdc" ]
  ldflags += [ "-lot_vgs" ]
  } else {
  ldflags += [ "-lot_mpi_isp" ]
  ldflags += [ "-lir_auto" ]
  ldflags += [ "-lss_mpi_awb" ]
  # ldflags += [ "-live" ]
  # ldflags += [ "-ldnvqe" ]
  ldflags += [ "-ldrc" ]
  ldflags += [ "-lldci" ]
  # ldflags += [ "-lupvqe" ]
  ldflags += [ "-ldehaze" ]
  ldflags += [ "-lvoice_engine" ]
  ldflags += [ "-lss_mpi_isp" ]
  ldflags += [ "-lss_mpi_ae" ]
  ldflags += [ "-lbnr" ]
  ldflags += [ "-lacs" ]
  ldflags += [ "-lextend_stats" ]
  ldflags += [ "-lcalcflicker" ]
  # ldflags += [ "-lhdmi" ]
  }
  deps = [
    "//third_party/bounds_checking_function:libsec_shared",
    "//device/soc/hisilicon/common/hal/display:display_layer",
    "//device/soc/hisilicon/common/hal/media:hardware_media_sdk"
  ]

  #To enable low latency for distributed cameras, add the macro "ENABLE_DISTRIBUTED_CAMERA_LOW_DELAY " after the [defines] variable.
  defines = [ "HAVE_DISPLAY" ]
  if ((board_name == "hi3516dv300" || board_name == "hispark_taurus") &&
      ohos_kernel_type == "liteos_a") {
    if (ohos_build_compiler == "clang") {
      ldflags += [ "-Wl,-L${ohos_root_path}/device/hisilicon/hispark_taurus/sdk_liteos/mpp/lib" ]
      include_dirs +=
          [ "//device/hisilicon/hi3516dv300/sdk_liteos/mpp/include" ]
      deps += [ "//device/hisilicon/build/hi3516dv300/liteos:hi3516dv300_image" ]
    } else {
      ldflags += [ "-Wl,-L${ohos_root_path}/device/hisilicon/${board_name}/sdk_liteos/mpp/lib" ]
      include_dirs +=
          [ "//device/hisilicon/${board_name}/sdk_liteos/mpp/include" ]
      #deps += [ "//device/hisilicon/build/hi3516dv300:hi3516dv300_image" ]
    }
  } else if ((board_name == "hispark_aiflylite" || board_name == "hispark_aifly") && ohos_kernel_type == "linux") {
    ldflags += [ "-pthread" ]
    ldflags += [ "-rdynamic" ]
    defines += [ "__SS928V100__" ]
    CHIP_TYPE = "ss928v100"
    COMPILE_TYPE = "clang_musl"
    ldflags += [ "-L${ohos_root_path}/device/soc/hisilicon/common/hal/middleware/source/component/otconfaccess/lib/$CHIP_TYPE/$COMPILE_TYPE/" ]
    ldflags += [ "-Wl,-L${ohos_root_path}/device/soc/hisilicon/hi3403v100/sdk_linux/smp/a55_linux/mpp/out/lib" ]
    include_dirs +=
          [ "//device/soc/hisilicon/hi3403v100/sdk_linux/smp/a55_linux/mpp/out/include" ]
    include_dirs +=
          [ "//device/soc/hisilicon/hi3403v100/sdk_linux/smp/a55_linux/mpp/cbb/isp/include" ]
  } else if (ohos_kernel_type == "linux") {
    ldflags += [ "-pthread" ]
    if (ohos_build_compiler == "clang") {
      ldflags += [ "-Wl,-L$ohos_root_path/vendor/hisi/camera/dvkit_product/linux/hi3516dv300/Hi3516CV500_SDK_V2.0.2.0/Hi3516CV500_SDK_V2.0.2.0/smp/a7_linux/mpp/lib" ]
      include_dirs += [ "//vendor/hisi/camera/dvkit_product/linux/hi3516dv300/Hi3516CV500_SDK_V2.0.2.0/Hi3516CV500_SDK_V2.0.2.0/smp/a7_linux/mpp/include" ]
      deps += [ "//vendor/hisi/camera/dvkit_product/linux/hi3516dv300/Hi3516CV500_SDK_V2.0.2.0:linux_kernel" ]
    } else {
      ldflags += [ "-Wl,-L${ohos_root_path}/device/hisilicon/hi3559v200/sdk_linux/mpp/lib" ]
      include_dirs +=
          [ "//device/hisilicon/hi3559v200/sdk_linux/mpp/include" ]
    }
  } else if (board_name == "hispark_taurus" && ohos_kernel_type == "linux") {
    ldflags += [ "-lpthread" ]
    ldflags += [ "-lhi_irq" ]
    ldflags += [ "-lsdk" ]
    ldflags += [ "-lhi_osal" ]
    ldflags += [ "-laac_dec" ]
    ldflags += [ "-laac_enc" ]
    ldflags += [ "-laac_comm" ]
    ldflags += [ "-l_hiawb" ]
    ldflags += [ "-lir_auto" ]
    ldflags += [ "-lhi3516cv500_base" ]
    ldflags += [ "-lhi3516cv500_sys" ]
    ldflags += [ "-lhi3516cv500_chnl" ]
    ldflags += [ "-lhi3516cv500_rgn" ]
    ldflags += [ "-lhi3516cv500_vo" ]
    ldflags += [ "-lhi3516cv500_vgs" ]
    ldflags += [ "-lhi3516cv500_vpss" ]
    ldflags += [ "-lhi3516cv500_vdec" ]
    ldflags += [ "-lhi3516cv500_h265e" ]
    ldflags += [ "-lhi3516cv500_h264e" ]
    ldflags += [ "-lhi3516cv500_jpege" ]
    ldflags += [ "-lhi3516cv500_venc" ]
    ldflags += [ "-lhi3516cv500_vedu" ]
    ldflags += [ "-lhi3516cv500_vi" ]
    ldflags += [ "-lhi3516cv500_isp" ]
    ldflags += [ "-lhi3516cv500_rc" ]
    ldflags += [ "-lhi3516cv500_jpegd" ]
    ldflags += [ "-lhi3516cv500_vfmw" ]
    ldflags += [ "-lhi3516cv500_gdc" ]
    ldflags += [ "-lhi3516cv500_dis" ]
    ldflags += [ "-lhi3516cv500_acodec" ]
    ldflags += [ "-lhi3516cv500_adec" ]
    ldflags += [ "-lhi3516cv500_aenc" ]
    ldflags += [ "-lhi3516cv500_aio" ]
    ldflags += [ "-lhi3516cv500_nnie" ]
    ldflags += [ "-lhi3516cv500_ive" ]
    ldflags += [ "-lhi3516cv500_ai" ]
    ldflags += [ "-lhi3516cv500_ao" ]
    ldflags += [ "-lhi_sensor_i2c" ]
    ldflags += [ "-lsecurec" ]
    ldflags += [ "-Wl,-L$ohos_root_path/device/hisilicon/hispark_taurus/sdk_linux/soc/lib_lite" ]
    include_dirs += [ "$ohos_root_path/device/hisilicon/hispark_taurus/sdk_linux/soc/src/mpp/cbb/include" ]
    include_dirs += [ "$ohos_root_path/third_party/bounds_checking_function/include" ]
    include_dirs += [ "$ohos_root_path/device/hisilicon/hispark_taurus/sdk_linux/huawei_proprietary/include" ]
  } else if ((board_name == "hi3518ev300" || board_name == "hispark_aries") &&
             ohos_kernel_type == "liteos_a") {
    if (ohos_build_compiler == "clang") {
      ldflags += [ "-Wl,-L${ohos_root_path}/device/hisilicon/hispark_aries/sdk_liteos/mpp/lib/" ]
      deps += [ "//device/hisilicon/build/hi3518ev300:hi3518ev300_make_kernel" ]
      include_dirs += [
        "//device/hisilicon/hi3518ev300/sdk_liteos/mpp/include",
      ]
    } else {
      ldflags += [
        "-Wl,-L$ohos_root_path/device/hisilicon/hi3518ev300/sdk_liteos/mpp/lib",
      ]
      deps += [ "//device/hisilicon/build/hi3518ev300:hi3518ev300_make_kernel" ]
      include_dirs +=
          [ "//device/hisilicon/hi3518ev300/sdk_liteos/mpp/include" ]
    }
  } else if ((board_name == "hi3518ev300" || board_name == "hispark_aries") &&
             ohos_kernel_type == "linux") {
    ldflags += [ "-pthread" ]
    ldflags += [ "-Wl,-L$ohos_root_path/vendor/hisi/camera/dvkit_product/linux/hi3518ev300/Hi3516EV200_SDK_V1.0.1.2_LINUX/Hi3516EV200_SDK_V1.0.1.2/mpp/lib" ]
    deps += [ "//vendor/hisi/camera/dvkit_product/linux/hi3518ev300/Hi3516EV200_SDK_V1.0.1.2_LINUX:linux_kernel" ]
    include_dirs += [ "//vendor/hisi/camera/dvkit_product/linux/hi3518ev300/Hi3516EV200_SDK_V1.0.1.2_LINUX/Hi3516EV200_SDK_V1.0.1.2/mpp/include" ]
  } else if (board_name == "aegis_hi3516dv300" &&
             ohos_kernel_type == "liteos_a") {
    ldflags += [
      "-Wl,-L${ohos_root_path}/device/hisilicon/$board_name/sdk_liteos/mpp/lib",
    ]
    include_dirs += [ "//device/hisilicon/$board_name/sdk_liteos/mpp/include" ]
    deps += [ "//device/hisilicon/$board_name/build:aegis_hi3516dv300_image" ]
  }
}

executable("hal_sample_camera") {
  sources = [
    "src/sample_camera.c",
  ]
  cflags = [ "-Wall" ]
  cflags_cc = cflags
  include_dirs = ["//foundation/multimedia/media_utils_lite/hals"]

  ldflags = [ "-lpthread" ]
  ldflags += [ "-Wl,-rpath-link=$ohos_root_path/$root_out_dir" ]
  ldflags += [ "-lhdi_camera" ]
  ldflags += [ "-lhdi_videodisplayer" ]

  deps = [
    ":hdi_camera",
    "//device/soc/hisilicon/common/hal/display:display_layer",
  ]
  output_dir = "$root_out_dir/dev_tools"
}
