# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//drivers/hdf_core/adapter/uhdf2/uhdf.gni")
import("//foundation/distributedhardware/distributed_audio/distributedaudio.gni")
import("//foundation/multimedia/media_utils_lite/config.gni")

shared_library("libaudio_manager_daudio_primary_service_1.0") {
  include_dirs = [
    "${hdf_ser_aud_path_lite}/include",
    "${hdf_service_path}/hdi_service/common/include",
    "${hdf_service_path}/hdi_service/common/log/include",
    "${hdf_service_path}/hdi_service/common/utils/include",
    "${distributed_audio_hdf_path}/hdf_interfaces/distributed_audio/audio/v1_0",
    "${distributed_audio_hdf_path}/hdf_interfaces/distributed_audio/audioext/v1_0",
    "//drivers/hdf_core/interfaces/inner_api/utils",
    "//drivers/hdf_core/interfaces/inner_api/osal/uhdf",
    "//third_party/cJSON",
    "//base/hiviewdfx/hilog_lite/interfaces/native/kits"
  ]

  if (distributed_audio_extension_sa) {
    include_dirs +=
        [ "${distributedaudio_ext_path}/hdf_service_extension/include/" ]
  }

  sources = [
    "./src/audio_adapter_interface_impl.cpp",
    "./src/audio_capture_interface_impl.cpp",
    "./src/audio_manager_interface_impl.cpp",
    "./src/audio_render_interface_impl.cpp",
  ]

  if (distributed_audio_extension_sa) {
    sources += [
      "${distributedaudio_ext_path}/hdf_service_extension/src/audio_capture_ext_impl.cpp",
      "${distributedaudio_ext_path}/hdf_service_extension/src/audio_render_ext_impl.cpp",
    ]
  }

  public_deps = [ "${hdf_service_path}/hdi_service/common:libdaudio_hdf_utils" ]

  deps = [
    "//commonlibrary/c_utils/base:utils",
    "//foundation/multimedia/audio_lite/services/audiomanager:audio_device_manager_lite",
    "//foundation/multimedia/media_utils_lite:media_common",
  ]

  if (distributed_audio_extension_sa) {
    cflags = [ "-DDAUDIO_SUPPORT_EXTENSION" ]
  }

  defines = [
    "HI_LOG_ENABLE",
    "LOG_DOMAIN=0xD004100",
  ]
  if (enable_distributed_dfx == true) {
    defines += ["ENABLE_DFX"]
  }
}
